[package]
name = "ptrkalm-hello-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.28.2"
mongodb = "2.6.0"
shuttle-shared-db = { version = "0.21.0", features = ["mongodb"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"